--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "nanoid": "^3.1.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "^4.0.3",
     "redux-devtools-extension": "^2.13.9",
+    "socket.io-client": "^4.2.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
