--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "redux-devtools-extension": "^2.13.9",
+    "seamless-scroll-polyfill": "^2.1.5",
     "socket.io-client": "^4.2.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
